Dirty renamed all things to PlutoECL. Fixes after copy from CeresECL repo Monobehaviours branch.

--- a/Sources/Editor/InsaneOne.CeresECL.Editor.asmdef
+++ b/Sources/Editor/InsaneOne.CeresECL.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "InsaneOne.CeresECL.Editor",
+    "name": "InsaneOne.PlutoECL.Editor",
     "references": [
         "GUID:20f61b99a18cf83488884339898131ac"
     ],
