--- a/Sources/Misc/InsaneOne.PlutoECL.Misc.asmdef
+++ b/Sources/Misc/InsaneOne.PlutoECL.Misc.asmdef
@@ -1,12 +1,9 @@
 {
-    "name": "InsaneOne.CeresECL.Misc.Editor",
+    "name": "InsaneOne.PlutoECL.Misc",
     "references": [
-        "GUID:20f61b99a18cf83488884339898131ac",
-        "GUID:8a7bbcb7000134c49aceff828a615fea"
+        "GUID:20f61b99a18cf83488884339898131ac"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
