--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-    "name": "com.insaneone.ceresecl",
+    "name": "com.insaneone.plutoecl",
     "author": "InsaneOne",
-    "displayName": "Ceres ECL",
-    "description": "Ceres ECL is Entity Component Logic implementation for Unity (C#) by InsaneOne. MIT License. This is MonoBehaviours version to improve experience of Ceres usage in Unity.",
+    "displayName": "Pluto ECL",
+    "description": "Pluto ECL is Entity Component Logic implementation for Unity (C#) by InsaneOne. MIT License.",
     "unity": "2019.1",
-    "version": "0.2.9-monobehaviors",
+    "version": "0.3.0",
     "keywords": [
-        "ceresecl",
+        "plutoecl",
         "ecl",
         "insaneone"
     ],
     "dependencies": {},
     "repository": {
         "type": "git",
-        "url": "https://github.com/InsaneOneHub/CeresECL.git"
+        "url": "https://github.com/InsaneOneHub/PlutoECL.git"
     }
 }
